--- a/static/layout.css
+++ b/static/layout.css
@@ -12,22 +12,33 @@
 }
 
 /* ---//  menu    */
+.logo_img {
+    width:66px;height:66px;display:inline;
+    float:left;
+}
+
 .pc_header_gnb {
     background-color: #eef;
     height:66px;
     margin: 0 0 10px 0;
+    vertical-align: middle;
 }
 
 .pc_header_gnb ul {
-    display:inline-block;
-    list-style:none;
-    padding-bottom: 7px;
+    /*
+    width:70%;
+    border:1px solid red; */
 }
 
 .pc_header_gnb ul li {
+    display:inline-block;
+    list-style:none;
     float:left;
-    width:100px;
-    vertical-align:center;
+    line-height: 30px;
+    width:15%;
+    padding-top: 15px;
+    vertical-align:middle;
+    text-align: center;
 }
 /*  ---// menu    */
 
