--- a/static/layout.css
+++ b/static/layout.css
@@ -26,8 +26,10 @@
 }
 
 .pc_header_gnb ul {
+    display: inline-block;
+    width:100%;
     /*
-    width:70%;
+
     border:1px solid red; */
 }
 
@@ -41,6 +43,14 @@
     vertical-align:middle;
     text-align: center;
 }
+.pc_header_gnb div{
+    display: inline-block;
+    width:90%;
+    height: 66px;
+    padding-bottom:25px;
+    margin:0;
+}
+
 /*  ---// menu    */
 
 /* --- footer -- */
