--- a/static/tag.css
+++ b/static/tag.css
@@ -2,6 +2,10 @@ body {
     background-color: #fff;
     color: #333;
     font: 0.9em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-    padding: 0;
-    margin: 0;
+/*    padding: 0;
+    margin: 0;*/
 }
+
+h2 {font-size: 1.3em; line-height: 1.3em;font-weight: bold; margin-bottom: 10px; }
+
+h3 {font-size: 1.2em; line-height: 1.2em;font-weight: bold; margin-bottom: 10px;  }
