--- a/static/tag.css
+++ b/static/tag.css
@@ -6,6 +6,6 @@ body {
     margin: 0;*/
 }
 
-h2 {font-size: 1.3em; line-height: 1.3em;font-weight: bold; margin-bottom: 10px; }
+h2 {font-size: 1.3em; line-height: 1.3em;font-weight: bold; margin:10px 0 10px 0; }
 
-h3 {font-size: 1.2em; line-height: 1.2em;font-weight: bold; margin-bottom: 10px;  }
+h3 {font-size: 1.2em; line-height: 1.2em;font-weight: bold; margin:10px 0 10px 0;  }
