--- a/static/tag.css
+++ b/static/tag.css
@@ -1,11 +1,12 @@
 body {
     background-color: #fff;
     color: #333;
-    font: 0.9em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-/*    padding: 0;
-    margin: 0;*/
-}
+    font: 0.9em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif; }
 
 h2 {font-size: 1.3em; line-height: 1.3em;font-weight: bold; margin:10px 0 10px 0; }
 
 h3 {font-size: 1.2em; line-height: 1.2em;font-weight: bold; margin:10px 0 10px 0;  }
+
+h4 {font-weight: bold;margin:10px 0 10px 0; }
+
+h5 {font-weight: bold;margin:10px 0 10px 0; }
