--- a/static/layout.css
+++ b/static/layout.css
@@ -70,3 +70,12 @@
   border: 0.5px solid rgb(175, 170, 174);
   border-radius: .5em;
 }
+
+.box_400 {
+  display:inline-block;
+  width: 400px;
+  margin: 0 5px 5px 0;
+  padding: 20px;
+  border: 0.5px solid rgb(175, 174, 174);
+  border-radius: .5em;
+}
