--- a/static/tag.css
+++ b/static/tag.css
@@ -10,3 +10,7 @@ h3 {font-size: 1.2em; line-height: 1.2em;font-weight: bold; margin:10px 0 10px 0
 h4 {font-weight: bold;margin:10px 0 10px 0; }
 
 h5 {font-weight: bold;margin:10px 0 10px 0; }
+
+p { padding:8px; }
+
+ul {padding:10px; }
