--- a/static/layout.css
+++ b/static/layout.css
@@ -67,7 +67,7 @@
   min-height:100px;
   /*margin: 0 0 15px 0;*/
   padding: 25px;
-  border: 0.5px solid rgb(175, 170, 174);
+  border: 0.5px solid  #f6eaea; /*rgb(175, 170, 174);*/
   border-radius: .5em;
 }
 
